jwt token creation process is completed. Only role playing remains.

--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\JoinForcesHubAPI.Application\JoinForcesHubAPI.Application.csproj" />
+    <ProjectReference Include="..\JoinForcesHubAPI.Infrastructure\JoinForcesHubAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
