--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "server=berjcode;Initial Catalog=MasterQuickSalesDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "JwtSettings": {
+    "ExpiryMinutes": "60",
+    "Issuer": "www.joinforceshub.com",
+    "Audince": "www.joinforceshub.com",
+    "SecretKey": "This is my secret key. Yes, yes secrey key"
+  }
 }
