--- a/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
+++ b/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
@@ -13,4 +13,8 @@
     <Folder Include="User\Queries\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
