--- a/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
@@ -10,7 +10,20 @@
     <Folder Include="Persistence\EntityConfigurations\" />
     <Folder Include="Persistence\Migrations\" />
     <Folder Include="Persistence\Repositories\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\JoinForcesHubAPI.Application\JoinForcesHubAPI.Application.csproj" />
   </ItemGroup>
 
 </Project>
