UserRepository has been created. LastName naming error fixed.

--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\JoinForcesHubAPI.Infrastructure\JoinForcesHubAPI.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
