--- a/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
