--- a/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
@@ -7,12 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\EntityConfigurations\" />
+    <Folder Include="Persistence\EntityConfigurations\Advertisements\" />
+    <Folder Include="Persistence\EntityConfigurations\Messages\" />
+    <Folder Include="Persistence\EntityConfigurations\Teams\" />
+    <Folder Include="Persistence\EntityConfigurations\Users\" />
     <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
