sqlserver string moved to appsettings and dbcontext was created

--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "server=berjcode;Initial Catalog=MasterQuickSalesDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "JoinForcesHubSqlServer": "server=berjcode;Initial Catalog=JoinForcesHubDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JwtSettings": {
     "ExpiryMinutes": "60",
