--- a/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
+++ b/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
