The project structure is organized for unit testing.

--- a/JoinForcesHub/test/JoinForcesHubAPI.API.UnitTest/JoinForcesHubAPI.API.UnitTest.csproj
+++ b/JoinForcesHub/test/JoinForcesHubAPI.API.UnitTest/JoinForcesHubAPI.API.UnitTest.csproj
@@ -22,4 +22,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ControllerTests\Auth\Commands\" />
+    <Folder Include="ControllerTests\Auth\Queries\" />
+    <Folder Include="ControllerTests\" />
+  </ItemGroup>
+
 </Project>
