--- a/JoinForcesHub/test/JoinForcesHubAPI.Infrastructure.UnitTest/JoinForcesHubAPI.Infrastructure.UnitTest.csproj
+++ b/JoinForcesHub/test/JoinForcesHubAPI.Infrastructure.UnitTest/JoinForcesHubAPI.Infrastructure.UnitTest.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RepositoriesTests\User\Commands\" />
+    <Folder Include="RepositoriesTests\User\Queries\" />
+  </ItemGroup>
+
 </Project>
