--- a/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
+++ b/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Behaviors\" />
+    <Folder Include="Contracts\UserRoles\" />
   </ItemGroup>
 
   <ItemGroup>
