--- a/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
+++ b/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
@@ -8,12 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\JoinForcesHub.Domain\JoinForcesHub.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Constants\" />
   </ItemGroup>
 
 </Project>
