refreshtoken was added to the user entity and the jwt token structure was edited

--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/appsettings.json
@@ -11,6 +11,7 @@
   },
   "JwtSettings": {
     "ExpiryMinutes": "60",
+    "RefreshTokenExpiryMinutes" : "80",
     "Issuer": "www.joinforceshub.com",
     "Audince": "www.joinforceshub.com",
     "SecretKey": "This is my secret key. Yes, yes secrey key"
