--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\JoinForcesHubAPI.Infrastructure\JoinForcesHubAPI.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
