--- a/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubAPI.Infrastructure/JoinForcesHubAPI.Infrastructure.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
