--- a/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
+++ b/JoinForcesHub/src/Core/JoinForcesHubAPI.Application/JoinForcesHubAPI.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
