--- a/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
+++ b/JoinForcesHub/src/External/JoinForcesHubWeb.API/JoinForcesHubWeb.API.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Content\Images\User\" />
     <Folder Include="Helpers\" />
   </ItemGroup>
 
